--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,1 @@
-
-spring.datasource.url=jdbc:postgresql://100.24.158.193:5432/gestor
-spring.datasource.username=postgres
-spring.datasource.password=Note=R590
-
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=dev
