--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:postgresql://100.24.158.193:5432/gestor
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestor
 spring.datasource.username=postgres
-spring.datasource.password=Note=R590
+spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
